# ot-harjoitustyo

./: .coveragerc  README.md  pyproject.toml  tasks.py
config/: README.md  settings.ini
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL.md  Machine.md  Monopoli.md
src/: board.py  config.py  input_handling.py  inputhandler.py  main.py  piece.py  pool.py  render.py
src/game/: board.py  piece.py
src/tests/: board_test.py  config_test.py  piece_test.py  pool_test.py
src/ui/: inputhandler.py  render.py
